<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:id="@+id/constraintLayout"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        android:background="?android:windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userManagement"
            android:background="@drawable/profile_picture_shape"
            android:clipToOutline="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/greetings"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImage"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:layout_editor_absoluteX="32dp">

            <Button
                android:id="@+id/changeProfilePictureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/changeProfilePictureButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/changeNotificationsSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/changeNotificationsSettingsButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/yourResultsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/yourResultsButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/changeThemeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/changeThemeButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/changeLanguageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/changeLanguageButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bottom_border"
                android:text="@string/logoutButton"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
